<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingLeft="@dimen/margin5dp"
        android:paddingTop="@dimen/margin15dp"
        android:paddingRight="@dimen/margin5dp"
        android:paddingBottom="@dimen/margin15dp"
        android:text="@string/txtTitle"
        android:textColor="@color/trueRedColor"
        android:textSize="@dimen/titleTextSize"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/txtUSD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/txtConvertUSD"
        android:inputType="number"
        android:paddingLeft="@dimen/margin5dp"
        android:paddingTop="@dimen/margin15dp"
        android:paddingRight="@dimen/margin5dp"
        android:paddingBottom="@dimen/margin15dp"
        android:textSize="@dimen/textFieldTextSize" />

    <RadioGroup
        android:id="@+id/radGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin5dp" >

    <RadioButton
        android:id="@+id/radToEuros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:padding="@dimen/margin5dp"
        android:text="@string/txtRadEuro"
        android:textSize="@dimen/radBtnTextSize" />

    <RadioButton
        android:id="@+id/radToPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:padding="@dimen/margin5dp"
        android:text="@string/txtRadPeso"
        android:textSize="@dimen/radBtnTextSize" />

    <RadioButton
        android:id="@+id/radToCAD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:padding="@dimen/margin5dp"
        android:text="@string/txtRadCAD"
        android:textSize="@dimen/radBtnTextSize" />
    </RadioGroup>

    <Button
        android:id="@+id/btnConvert"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/margin15dp"
        android:paddingBottom="@dimen/margin15dp"
        android:text="@string/btnConvert"
        android:textSize="@dimen/btnConvertTextSize" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/margin5dp"
        android:textColor="@color/trueRedColor"
        android:textSize="@dimen/textResultTextSize" />

</LinearLayout>